--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.2",
+    "express-sse": "^0.5.3",
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mongoose": "^5.7.5",
